Altered main page style

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,8 @@
             </div>
         </div>
     </div>
-    <h1> Contact Page</h1>
+    <div class = "body2">
+        Contact Page
+    </div>
 </body>
 </html>
