--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,8 @@
             </div>
         </div>
     </div>
-    <h1>Projects Page</h1>
+    <div class = "body2">
+        Project Page
+    </div>
 </body>
 </html>
