--- a/resume.html
+++ b/resume.html
@@ -43,6 +43,8 @@
             </div>
         </div>
     </div>
-    <h1> Resume Page</h1>
+    <div class = "body2">
+        Resume
+    </div>
 </body>
 </html>
